# Demos-Rules

./: .gitignore  .pr_agent.toml  AGENTS.md  Demos.code-workspace  ISO_27001_CODE_REVIEW_CHECKLIST.md  Package_Manager_Test_Plan.md  agent.toml  example.pr_agent.toml  mcp.json  pr_compliance_checklist.owasp.yaml  pr_compliance_checklist.pcidss.yaml  pr_compliance_checklist.soc2type2.yaml  qodo.code-workspace  qodo.md  readme.md
.github/workflows/: ci.yml
Accounts/Analog/: README.md  conftest.py  pytest.ini  requirements-test.txt  run_tests.py  test_authentication.py  test_package_manager_cli.py  test_package_manager_vscode.py  test_plan.md  test_project_integration.py
Accounts/Pathlock/: Prompts.md  TestGenerationFlow.md  TusharTestScenarios.md
Accounts/VegaSecurity/: generated-best-practices.md  original-code-guidelines.md
Config/QodoMerge/: .pr_agent.toml  .pr_agent_auto_best_practices
ConfigsSamples/QodoMerge/: .pr_agent_accepted_suggestions
Diagrams/OnPrem/: qodo.mermaid
QodoArchitectureDiagrams/OnPrem/: qodo-aware.mermaid  qodo-gen.mermaid  qodo-merge.mermaid
QodoComplianceRules/: GDPR.md  General.md  HIPAA.md  OWASP.md  PCIDSS.md  Soc2Type2.md  pr_compliance_checklist.gdpr.yaml  pr_compliance_checklist.hipaa.yaml
Rules/Compliance/: GDPR.md  General.md  (+3 more)
Slides/: qodo.slidev.md  test.slidev.md
Sri/boring-todo-api/: pyproject.toml
Sri/boring-todo-api/src/boring_todo_api/: main.py
Sri/boring-todo-api/src/boring_todo_api/tests/: conftest.py  test_main.py
agents/: bash-explainer.toml  mac_process_reviewer.toml  suggest_python_test_scenarios.toml
(+22 files in other folders)
